--- a/app/views/feed/index.html.erb
+++ b/app/views/feed/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Feed</h1>
 <% User.all.each do |user| %>
-  <%= user.full_name %>
+  <%= user.profile_photo(100) %> <%= user.full_name %>
+  <br>
 <% end %>
