--- a/app/views/feed/index.html.erb
+++ b/app/views/feed/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Feed</h1>
+<h2>Stay tuned for important updates.</h2>
 <% User.all.each do |user| %>
   <%= user.profile_photo(100) %>
   <%= user.full_name %> has <%= user.balance %> cheese sticks.
